section-white-bottom-grid

--- a/index.html
+++ b/index.html
@@ -38,6 +38,31 @@
                 </li>
             </ul>
         </section>
+        <section>
+            <ul class="white-bottom">
+                <li>
+                    <img src="assets/img/action4.jpeg" alt="">
+                </li>
+                <li></li>
+                <li>
+                    <img src="assets/img/action5.jpeg" alt="">
+                </li>
+                <li>
+                    <p>Our t-shirts (kids and adult sizes), pins, and posters will be available for purchase at our
+                        exclusive pop-up shop during our SF Design Week Studio Crawl this Friday, June 21. You can
+                        choose what amount to donate. All proceeds will go to the American Red Cross to help the
+                        communities that are still displaced.
+
+                    </p>
+                </li>
+                <li> <img src="assets/img/action6.jpeg" alt="">
+                </li>
+                <li> <img src="assets/img/action7.jpeg" alt="">
+                </li>
+
+
+            </ul>
+        </section>
     </main>
 
     <!-- /* ---------- f•o•o•t•e•r -------------*/ -->
