white-section-done

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                         California Grizzly and used it to create custom tees, pins and posters.
                     </p>
                 </li>
-                <li> <img src="assets/img/action3.jpeg" alt="">
-                </li>
+                <li> <img src="assets/img/action3.jpeg" alt=""></li>
+                <li></li>
             </ul>
         </section>
         <section>
@@ -59,8 +59,7 @@
                 </li>
                 <li> <img src="assets/img/action7.jpeg" alt="">
                 </li>
-
-
+                <li></li>
             </ul>
         </section>
     </main>
