--- a/index.html
+++ b/index.html
@@ -62,7 +62,46 @@
                 <li></li>
             </ul>
         </section>
+        <section class="bear-head-text">
+            <article class="head">
+                <p>001</p>
+                <h2>The</h2>
+                <h2>Golden</h2>
+                <h2>Bear</h2>
+            </article>
+            <article class="text">
+                <p>This design is all about the resilience of California to overcome difficult situations and
+                    come out stronger than before. It’s a flip of the UNC Tarheel mascot with added elements like the
+                    California poppy.</p>
+                <p>— Kevin Lam, Artist </p>
+            </article>
+        </section>
+        <section class="bear-images">
+            <img src="assets/img/goldenbear.png" alt="">
+            <img src="assets/img/gb2.png" alt="">
+        </section>
+
+
+        <section class="poppy-head-text">
+            <article class="head">
+                <p>002</p>
+                <h2>The</h2>
+                <h2>Poppy</h2>
+                <h2>Bear</h2>
+            </article>
+            <article class="text">
+                <p>This design is inspired by the quote ‘grow through what you go through’ and represents the strength
+                    of Californians and how we will continue to thrive, regardless of what knocks us down.
+                </p>
+                <p>— Alyssa Wigant, Artist </p>
+            </article>
+        </section>
+        <section class="poppy-images">
+            <img src="" alt="">
+            <img src="" alt="">
+        </section>
     </main>
+
 
     <!-- /* ---------- f•o•o•t•e•r -------------*/ -->
     <footer></footer>
