main-done-no-animation

--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
     <header>
 
     </header>
-    <!--  /* --------- n•a•v-b•a•r --------------*/-->
-
     <!-- /*---------- m•a•i•n ----------------*/ -->
     <main>
         <section>
@@ -52,7 +50,6 @@
                         exclusive pop-up shop during our SF Design Week Studio Crawl this Friday, June 21. You can
                         choose what amount to donate. All proceeds will go to the American Red Cross to help the
                         communities that are still displaced.
-
                     </p>
                 </li>
                 <li> <img src="assets/img/action6.jpeg" alt="">
@@ -79,9 +76,8 @@
         <section class="bear-images">
             <img src="assets/img/goldenbear.png" alt="">
             <img src="assets/img/gb2.png" alt="">
+            <p></p>
         </section>
-
-
         <section class="poppy-head-text">
             <article class="head">
                 <p>002</p>
@@ -97,8 +93,8 @@
             </article>
         </section>
         <section class="poppy-images">
-            <img src="" alt="">
-            <img src="" alt="">
+            <img src="assets/img/rosebear.png" alt="">
+            <img src="assets/img/pb3.png" alt="">
         </section>
     </main>
 
