header-intro-n-article

--- a/index.html
+++ b/index.html
@@ -10,10 +10,32 @@
 </head>
 
 <body>
+    <div class="vertical-line-left">
+        <p></p>
+        <p></p>
+    </div>
     <!-- /* --------- h•e•a•d•e•r --------------*/ -->
     <header>
-
+        <p>Elephant presents</p>
+        <h1>CALIFORNIA</h1>
+        <h3>CALLING</h3>
+        <p>Dedicated to the communities affected by the 2018 wildfires.</p>
+        <nav>
+            <img src="assets/img/bear.svg" alt="bear-logo">
+            <a href="#">RSVP</a>
+        </nav>
     </header>
+    <article class="intro">
+        <h2>Last year, nearly 2 </h2>
+        <h2></h2>
+        <h2>million acres were</h2>
+        <h2>devastated by the</h2>
+        <h2>deadliest, most</h2>
+        <h2>destructive wildfires in</h2>
+        <h2>California history.</h2>
+    </article>
+    <article class="facts"></article>
+
     <!-- /*---------- m•a•i•n ----------------*/ -->
     <main>
         <section>
@@ -97,8 +119,6 @@
             <img src="assets/img/pb3.png" alt="">
         </section>
     </main>
-
-
     <!-- /* ---------- f•o•o•t•e•r -------------*/ -->
     <footer></footer>
 
