--- a/index.html
+++ b/index.html
@@ -34,7 +34,17 @@
         <h2>destructive wildfires in</h2>
         <h2>California history.</h2>
     </article>
-    <article class="facts"></article>
+    <article class="facts">
+        <div class="figures">
+            <p>Wildfires</p>
+            <h2>8,527</h2>
+            <p>Insurance Claim Damges</p>
+            <h2>$12B</h2>
+            <p>Acres Burned</p>
+            <h2>1,893,913</h2>
+        </div>
+        <img src="assets/img/map.svg" alt="cali-map" class="map">
+    </article>
 
     <!-- /*---------- m•a•i•n ----------------*/ -->
     <main>
@@ -100,6 +110,8 @@
             <img src="assets/img/gb2.png" alt="">
             <p></p>
         </section>
+        <img src="assets/img/cc-circle-2.png" alt="" class="circle">
+
         <section class="poppy-head-text">
             <article class="head">
                 <p>002</p>
