--- a/index.html
+++ b/index.html
@@ -132,7 +132,32 @@
         </section>
     </main>
     <!-- /* ---------- f•o•o•t•e•r -------------*/ -->
-    <footer></footer>
+    <footer>
+        <article class="text">
+            <p>Join Us</p>
+            <p>Mark your calendar for our SF</p>
+            <p>Design Week Studio Crawl. In</p>
+            <p>addition to custom swag, we’ll</p>
+            <p>also have a DJ, a mixologist,</p>
+            <p>and other cool surprises we</p>
+            <p>can’t tell you about yet.</p>
+        </article>
+
+        <article>
+            <img src="assets/img/fb.png" alt="fb-logo">
+            <img src="assets/img/ig.png" alt="instagram-logo">
+            <img src="assets/img/li.png" alt="linkedin-logo">
+        </article>
+        <div>
+            <p>A SF Design Week project.</p>
+            <div> <img src="assets/img/sfdw-logo.png" alt="sfdw-logo">
+                <img src="assets/img/ngo-logo.png" alt="ngo-logo">
+            </div>
+        </div>
+        <nav>
+            <a href="#">RSVP</a>
+        </nav>
+    </footer>
 
 </body>
 
