footer-without-banderole

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     </main>
     <!-- /* ---------- f•o•o•t•e•r -------------*/ -->
     <footer>
-        <article class="text">
+        <article class="footer-text">
             <p>Join Us</p>
             <p>Mark your calendar for our SF</p>
             <p>Design Week Studio Crawl. In</p>
@@ -142,21 +142,24 @@
             <p>and other cool surprises we</p>
             <p>can’t tell you about yet.</p>
         </article>
-
+        <nav>
+            <a href="#">RSVP</a>
+        </nav>
         <article>
             <img src="assets/img/fb.png" alt="fb-logo">
             <img src="assets/img/ig.png" alt="instagram-logo">
             <img src="assets/img/li.png" alt="linkedin-logo">
         </article>
-        <div>
-            <p>A SF Design Week project.</p>
+        <section>
+            <div>
+                <p>A SF Design Week project.</p>
+                <p>2019</p>
+            </div>
+
             <div> <img src="assets/img/sfdw-logo.png" alt="sfdw-logo">
                 <img src="assets/img/ngo-logo.png" alt="ngo-logo">
             </div>
-        </div>
-        <nav>
-            <a href="#">RSVP</a>
-        </nav>
+        </section>
     </footer>
 
 </body>
