footer-bandarole-animation

--- a/index.html
+++ b/index.html
@@ -133,6 +133,12 @@
     </main>
     <!-- /* ---------- f•o•o•t•e•r -------------*/ -->
     <footer>
+        <div class="rotate">
+            <p href="#" class="recommendation"> <span>2019</span> JUNE 21, <span>2019</span> JUNE 21, <span>2019</span>
+                JUNE
+                21, <span>2019</span> JUNE 21, <span>2019</span> JUNE 21,
+            </p>
+        </div>
         <article class="footer-text">
             <p>Join Us</p>
             <p>Mark your calendar for our SF</p>
@@ -155,11 +161,12 @@
                 <p>A SF Design Week project.</p>
                 <p>2019</p>
             </div>
-
             <div> <img src="assets/img/sfdw-logo.png" alt="sfdw-logo">
                 <img src="assets/img/ngo-logo.png" alt="ngo-logo">
             </div>
         </section>
+
+
     </footer>
 
 </body>
