desktop-version-done

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 </head>
 
 <body>
-    <div class="vertical-line-left">
+    <div class="vertical-line">
         <p></p>
         <p></p>
+        <!-- <img src="assets/img/line.svg" alt="vertical-line"> -->
     </div>
-    <!-- /* --------- h•e•a•d•e•r --------------*/ -->
+    <!--h•e•a•d•e•r-->
     <header>
         <p>Elephant presents</p>
         <h1>CALIFORNIA</h1>
@@ -27,7 +28,6 @@
     </header>
     <article class="intro">
         <h2>Last year, nearly 2 </h2>
-        <h2></h2>
         <h2>million acres were</h2>
         <h2>devastated by the</h2>
         <h2>deadliest, most</h2>
@@ -45,17 +45,16 @@
         </div>
         <img src="assets/img/map.svg" alt="cali-map" class="map">
     </article>
-
-    <!-- /*---------- m•a•i•n ----------------*/ -->
+    <!-- m•a•i•n -->
     <main>
         <section>
             <ul class="white-middle">
                 <li>
-                    <img src="assets/img/action1.jpeg" alt="">
+                    <img src="assets/img/action1.jpeg" alt="man-with-t-shirt">
                 </li>
                 <li></li>
                 <li>
-                    <img src="assets/img/action2.jpeg" alt="">
+                    <img src="assets/img/action2.jpeg" alt="hands-printing-shirt">
                 </li>
                 <li>
                     <h2>Stuck in</h2>
@@ -64,18 +63,18 @@
                         California Grizzly and used it to create custom tees, pins and posters.
                     </p>
                 </li>
-                <li> <img src="assets/img/action3.jpeg" alt=""></li>
+                <li> <img src="assets/img/action3.jpeg" alt="hands-on-shirt"></li>
                 <li></li>
             </ul>
         </section>
         <section>
             <ul class="white-bottom">
                 <li>
-                    <img src="assets/img/action4.jpeg" alt="">
+                    <img src="assets/img/action4.jpeg" alt="t-shirt-bear-logo">
                 </li>
                 <li></li>
                 <li>
-                    <img src="assets/img/action5.jpeg" alt="">
+                    <img src="assets/img/action5.jpeg" alt="printing-machine">
                 </li>
                 <li>
                     <p>Our t-shirts (kids and adult sizes), pins, and posters will be available for purchase at our
@@ -84,9 +83,9 @@
                         communities that are still displaced.
                     </p>
                 </li>
-                <li> <img src="assets/img/action6.jpeg" alt="">
+                <li> <img src="assets/img/action6.jpeg" alt="canvas-bear-logo">
                 </li>
-                <li> <img src="assets/img/action7.jpeg" alt="">
+                <li> <img src="assets/img/action7.jpeg" alt="factory-t-shirts-2-employees">
                 </li>
                 <li></li>
             </ul>
@@ -106,12 +105,11 @@
             </article>
         </section>
         <section class="bear-images">
-            <img src="assets/img/goldenbear.png" alt="">
-            <img src="assets/img/gb2.png" alt="">
+            <img src="assets/img/goldenbear.png" alt="bear-art">
+            <img src="assets/img/gb2.png" alt="bear-face-logo-art">
             <p></p>
         </section>
-        <img src="assets/img/cc-circle-2.png" alt="" class="circle">
-
+        <img src="assets/img/cc-circle-2.png" alt="animated-circle-with-text" class="circle">
         <section class="poppy-head-text">
             <article class="head">
                 <p>002</p>
@@ -127,16 +125,16 @@
             </article>
         </section>
         <section class="poppy-images">
-            <img src="assets/img/rosebear.png" alt="">
-            <img src="assets/img/pb3.png" alt="">
+            <img src="assets/img/rosebear.png" alt="rosebear-artist">
+            <img src="assets/img/pb3.png" alt="rosebear-logo">
         </section>
     </main>
-    <!-- /* ---------- f•o•o•t•e•r -------------*/ -->
+    <!-- f•o•o•t•e•r -->
     <footer>
         <div class="rotate">
-            <p href="#" class="recommendation"> <span>2019</span> JUNE 21, <span>2019</span> JUNE 21, <span>2019</span>
+            <p class="recommendation"> <span>2019</span> JUNE 21, <span>2019</span> JUNE 21, <span>2019</span>
                 JUNE
-                21, <span>2019</span> JUNE 21, <span>2019</span> JUNE 21,
+                21, <span>2019</span> JUNE 21
             </p>
         </div>
         <article class="footer-text">
@@ -165,8 +163,6 @@
                 <img src="assets/img/ngo-logo.png" alt="ngo-logo">
             </div>
         </section>
-
-
     </footer>
 
 </body>
